[GTK][WPE][GPUProcess] Assertion failure during initialization https://bugs.webkit.org/show_bug.cgi?id=277796

Reviewed by Carlos Garcia Campos.

Initialize the gbm_device for the render node of the main device as
GPUProcess::initializeGPUProcess() to ensure its creation in the main
process thread.

* Source/WebCore/platform/graphics/gbm/DRMDeviceManager.cpp:
(WebCore::DRMDeviceManager::initializeMainDevice): Initialize the GBM
render node device.

Canonical link: https://commits.webkit.org/281990@main